[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Fluffy <michal-gdula@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
requests = "^2.31.0"
py-map-generation = {git = "https://github.com/Fluffy-Bean/py_map_generation.git"}
gunicorn = "^21.2.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
